# backend

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  initial.diff  project.tree  pyproject.toml
accounts/: authentication.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
apps/accounts/: apps.py  authentication.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_remove_usercontext_background_institution_type_and_more.py  0003_alter_usercontext_background_level_and_more.py  0004_studyplan_rag_documents.py  0005_studyplan_generation_fields.py  0006_studyweek_and_content_models.py  0007_studycontext_refactor.py
apps/ai/: apps.py  client.py  integration_guide.md  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/ai/migrations/: 0001_initial.py  0002_document_owner_alter_document_id_and_more.py  0003_document_status_fields.py
apps/ai/services/: chat.py  embedding.py  plan_outline.py  search.py  study_plan_generation.py  study_plan_generation_legacy.py
apps/ai/tools/: commit_user_context.py
docs/: async_jobs_study_plan.md  context-management.md  data-model-uml.md  frontend_integration_study_plan.md  study-context-plan.md  study_models_gist.md  study_plans_and_tasks.md
postgres-init/: 01_pgvector.sql
rag/: models.py  serializers.py  urls.py  views.py
rag/migrations/: 0001_initial.py
rag/services/: embedding.py  search.py
setup/: celery.py  settings.py  urls.py
